got tired will finish at home

--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body>
-    <form class="flex flex-row flex-wrap gap-4">  
-        <div>
-        <h1 class="text-2xl font-bold mb-4">Student Type</h1>
-        <select class="border border-gray-300 rounded-md p-2">
+    <form class="flex flex-row flex-wrap gap-50 p-2">  
+        <div class="w-[25%]">
+        <h1 class="text-2xl font-bold mb-4 mt-4">Student Type</h1>
+        <select class="border border-gray-300 rounded-md p-2 w-full">
             <option value="" disabled selected style="color: rgb(144, 161, 185);">-- Select Student Type --</option>
             <option value="New Student">New Student</option>
             <option value="Transferee">Transferee</option>
         </select>
         </div>
 
-        <div>
+        <div class="w-[25%]">
         <h1 class="text-2xl font-bold mb-4 mt-4">Religion</h1>
-        <select class="border border-gray-300 rounded-md p-2">
+        <select class="border border-gray-300 rounded-md p-2 w-full">
             <option value="" disabled selected style="color: rgb(144, 161, 185);">-- Select Religion --</option>
             <option value="Roman Catholic">Roman Catholic</option><option value="Christianity">Christianity</option>
             <option value="Islam">Islam</option><option value="Hinduism">Hinduism</option>
@@ -30,9 +30,9 @@
         </select>
         </div>
 
-        <div>
+        <div class="w-[25%]">
         <h1 class="text-2xl font-bold mb-4 mt-4">Civil Status</h1>
-        <select class="border border-gray-300 rounded-md p-2">
+        <select class="border border-gray-300 rounded-md p-2 w-full">
             <option value="" disabled selected style="color: rgb(144, 161, 185);">-- Select Civil Status --</option>
             <option value="Single">Single</option>
             <option value="Married">Married</option>
