--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1 class="text-3xl font-bold mb-4 mt-4">Personal Information</h1>
 
     <!-- Type, Religion, Civil Status -->
-    <form id="personalInfoForm" class="flex flex-row flex-wrap gap-x-50 gap-y-5 gap p-4" novalidate>
+    <form id="personalInfoForm" class="flex flex-row flex-wrap gap-x-50 gap-y-5 gap p-4" novalidate> <!-- because I am too lazy to remove the required attribute -->
         <div class="w-[25%]">
             <h1 class="text-2xl font-bold mb-4 mt-4">Student Type</h1>
             <span id="studentTypeError" class="text-red-500 text-sm"></span>
